--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -99,6 +99,10 @@
       <Project>{07A94BBB-16A5-4817-87EA-BB7BAEA844A7}</Project>
       <Name>EFIDS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EFIDS_Arhiv\EFIDS_Arhiv.csproj">
+      <Project>{182770bf-7bf4-44c3-bfee-d855c496009e}</Project>
+      <Name>EFIDS_Arhiv</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EFKIS\EFKIS.csproj">
       <Project>{1def3df1-f167-42f0-8a87-5ce6f144ec7e}</Project>
       <Name>EFKIS</Name>
