--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -18,7 +18,8 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress>false</Use64BitIISExpress>
+    <Use64BitIISExpress>
+    </Use64BitIISExpress>
     <IISExpressSSLPort>44326</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication>disabled</IISExpressAnonymousAuthentication>
     <IISExpressWindowsAuthentication>enabled</IISExpressWindowsAuthentication>
@@ -245,6 +246,7 @@
     <Compile Include="Areas\IDSRWT\IDSRWTAreaRegistration.cs" />
     <Compile Include="Controllers\api\Arhiv\UZ_DOC_PDF_Controller.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoOutGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_DetentionReturnController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_OperatorsWagonsGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_Reason_DiscrepancyController.cs" />
