Добавил таблицу операторов

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -352,6 +352,34 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bootstrap5.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bootstrap5.min.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.min.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap5.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap5.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bulma.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bulma.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.colVis.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.dataTables.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.dataTables.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.foundation.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.html5.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.jqueryui.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.print.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.print.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
+    <Content Include="Content\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.min.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap4.css" />
@@ -1707,6 +1735,7 @@
     <Content Include="Content\module\directory\table_dir_operators_wagons.css" />
     <Content Include="Content\module\directory\table_dir_park_station.css" />
     <Content Include="Content\module\directory\table_dir_park_ways.css" />
+    <Content Include="Content\module\directory\table_directory.css" />
     <Content Include="Content\module\report\view_td_report.css" />
     <Content Include="Content\module\report\view_sd_report.css" />
     <Content Include="Content\module\shared\form_detali.css" />
@@ -1879,6 +1908,7 @@
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
     <Content Include="Scripts\module\directory\edit_dir_operators_wagons.js" />
+    <Content Include="Scripts\module\directory\table_directory.js" />
     <Content Include="Scripts\module\directory\table_dir_operators_wagons.js" />
     <Content Include="Scripts\module\directory\table_dir_park_ways.js" />
     <Content Include="Scripts\module\directory\table_dir_park_station.js" />
