--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -356,30 +356,6 @@
     <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bootstrap5.min.css" />
     <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.css" />
     <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.min.css" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap5.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bootstrap5.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bulma.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.bulma.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.colVis.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.dataTables.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.dataTables.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.foundation.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.html5.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.jqueryui.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.print.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.print.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
-    <Content Include="Content\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.min.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap4.css" />
@@ -404,6 +380,22 @@
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.jqueryui.min.css" />
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.semanticui.css" />
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.semanticui.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap4.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap4.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap5.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap5.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bulma.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bulma.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.dataTables.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.dataTables.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.foundation.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.foundation.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.jqueryui.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.jqueryui.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.foundation.css" />
     <Content Include="Content\DataTables\media\css\dataTables.foundation.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.semanticui.css" />
@@ -1875,6 +1867,30 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap5.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bulma.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bulma.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.dataTables.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.dataTables.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap.min.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap4.js" />
@@ -1903,7 +1919,19 @@
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanicui.js" />
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanticui.js" />
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanticui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap4.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap5.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bulma.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bulma.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.dataTables.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.dataTables.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.jqueryui.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.semanticui.js" />
     <Content Include="Scripts\DataTables\media\js\dataTables.jqueryui.js" />
+    <Content Include="Scripts\jquery.dataTables.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.doubleScroll.js" />
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
@@ -2137,8 +2165,6 @@
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.dataTables.min.css" />
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.foundation.css" />
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.foundation.min.css" />
-    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.css" />
-    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap4.css" />
@@ -2311,24 +2337,6 @@
     <Content Include="Scripts\bootstrap-input-spinner.js" />
     <Content Include="Scripts\bootstrap-select.js" />
     <Content Include="Scripts\bootstrap-select.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.flash.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.flash.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\dataTables.fixedColumns.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\dataTables.fixedColumns.min.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\fixedColumns.bootstrap.min.js" />
