Добавил в EFIDS - Directory_Currency

--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Abstract\IWebAccess.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_BorderCheckpoint.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_CargoOutGroup.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_Currency.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_OperatorsWagonsGroup.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_PayerArrival.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Reason_Discrepancy.cs" />
@@ -238,6 +239,7 @@
     <Compile Include="Entities\RWT\Out_Supply.cs" />
     <Compile Include="Entities\RWT\SAPOutgoingSupply.cs" />
     <Compile Include="Entities\Directory\Directory_CargoOutGroup.cs" />
+    <Compile Include="Entities\Directory\Directory_Currency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
