--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Controllers\api\Arhiv\UZ_DOC_PDF_Controller.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoOutGroupController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CurrencyController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_DetentionReturnController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_OperatorsWagonsGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_Reason_DiscrepancyController.cs" />
