--- a/Test/App.config
+++ b/Test/App.config
@@ -86,6 +86,8 @@
 
     <add key="SMS_HOST" value="10.21.2.223"/>
     <add key="SMS_PORT" value="8787"/>
+	  
+    <add key="WebApi_BANK" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange/"/>	 	  
 
     <!-- **************************************************************** -->
     <!--              IDS                                                -->
