исправил адрес банка

--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -25,7 +25,7 @@
 		<add key="SMS_HOST" value="10.21.2.223" />
 		<add key="SMS_PORT" value="8787" />
 		<!-- Получение информации по курсам валют (расчет платы за пользование) -->
-		<add key="WebApi_BANK" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json"/>
+		<add key="WebApi_BANK" value="https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange/"/>
 
 		<!-- Настройки логирования -->
 		<add key="ESourceName" value="Web_IDS" />
