Разрабатываю буфер курса валют на Core

--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -9,7 +9,8 @@
     "IDS": "Data Source=krr-sql-paclx03;Initial Catalog=KRR-PA-CNT-Railway;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
   "Interval": {
-    "UpdateRent": 3600
+    "UpdateRent": 3600,
+    "UpdateBankRate": 3600000
   },
   "Control": {
     "UpdateRent": 15
