ids_core: Добавил сервис переноса валюты

--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -13,6 +13,14 @@
     "UpdateBankRate": 3600000
   },
   "Control": {
-    "UpdateRent": 15
+    "UpdateRent": 15,
+    "list_r030": "756,840"
+  },
+  "BankRate": {
+    "reqUrl": "https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json",
+    "Method": "GET",
+    "Accept": "application/json",
+    "ContentType": "application/json; charset=utf-8"
   }
+
 }
