ids_core - сервис обновления валют - исправил период обновления 1 час

--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -10,7 +10,7 @@
   },
   "Interval": {
     "UpdateRent": 3600,
-    "UpdateBankRate": 3600000
+    "UpdateBankRate": 3600
   },
   "Control": {
     "UpdateRent": 15,
