--- a/IDS_/IDS_.csproj
+++ b/IDS_/IDS_.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="NLog" Version="5.2.5" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EF_IDS\EF_IDS.csproj" />
   </ItemGroup>
 
