--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EventID": {
+    "IDS_WIR": 10,
+    "UpdateBankRate": 100,
+    "UpdateRent": 200
+  },
+
   "ConnectionStrings": {
     "IDS": "Data Source=krr-sql-paclx03;Initial Catalog=KRR-PA-CNT-Railway;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
