--- a/TestCore/appsettings.json
+++ b/TestCore/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EventID": {
+    "IDS_WIR": 1000
+  },
   "ConnectionStrings": {
     "IDS": "Data Source=krr-sql-paclx03;Initial Catalog=KRR-PA-CNT-Railway;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
