--- a/TestCore/TestCore.csproj
+++ b/TestCore/TestCore.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+	<None Update="nlog.config" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,9 +34,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />	 
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />	 	  
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />	 
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />		  
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />	 
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />		  
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />		
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />		  
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />		
+    <PackageReference Include="NLog" Version="5.2.5" />		
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />		  
   </ItemGroup>
 
   <ItemGroup>
