--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -64,6 +64,7 @@
       </system.Web>
   -->
   <system.web>
+	 <customErrors mode="On"/>
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.5" requestPathInvalidCharacters="&lt;,&gt;,%,&amp;,*,\,?" maxUrlLength="2048" maxQueryStringLength="32768"/>
     <authentication mode="Windows"/>
