CORE - Обновил контекст бд RailWay-ids

--- a/EF_IDS/EF_IDS.csproj
+++ b/EF_IDS/EF_IDS.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
