CORE в сервис WS_IDS:UpdateRent  - добавил обновление по прибытию  - добавил уставки интервалы дней

--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -19,7 +19,8 @@
     "UpdateBankRate": 3600
   },
   "Control": {
-    "UpdateRent": 15,
+    "UpdateRentArrival": 10,
+    "UpdateRentOutgoing": 10,
     "list_r030": "756,840"
   },
   "BankRate": {
