--- a/TestCore/appsettings.json
+++ b/TestCore/appsettings.json
@@ -24,6 +24,11 @@
     "Method": "GET",
     "Accept": "application/json",
     "ContentType": "application/json; charset=utf-8"
+  },
+  "GIVC": {
+    "url": "https://uz-gate.uz.gov.ua/api/v1",
+    "url_token": "GetToken",
+    "userName": "ArcelorMittal",
+    "password": "6be0258b"
   }
-
 }
