Создал сервис запросов к ГИВЦ

--- a/GIVC_Client/GIVC.csproj
+++ b/GIVC_Client/GIVC.csproj
@@ -10,7 +10,10 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WebApiToken\WebApiToken.csproj" />
   </ItemGroup>
 
 </Project>
