--- a/TestCore/appsettings.json
+++ b/TestCore/appsettings.json
@@ -6,8 +6,13 @@
     }
   },
   "EventID": {
-    "IDS_WIR": 1000
+    "IDS_WIR": 10,
+    "IDS_GIVC": 11,
+    "UpdateBankRate": 100,
+    "UpdateRent": 200,
+    "UpdateGIVC": 300
   },
+
   "ConnectionStrings": {
     "IDS": "Data Source=krr-sql-paclx03;Initial Catalog=KRR-PA-CNT-Railway;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
@@ -29,6 +34,7 @@
     "url": "https://uz-gate.uz.gov.ua/api/v1",
     "url_token": "GetToken",
     "userName": "ArcelorMittal",
-    "password": "6be0258b"
+    "password": "6be0258b",
+    "Edrpou": "24432974"
   }
 }
