--- a/WS_IDS/appsettings.json
+++ b/WS_IDS/appsettings.json
@@ -7,8 +7,10 @@
   },
   "EventID": {
     "IDS_WIR": 10,
+    "IDS_GIVC": 11,
     "UpdateBankRate": 100,
-    "UpdateRent": 200
+    "UpdateRent": 200,
+    "UpdateGIVC": 300
   },
 
   "ConnectionStrings": {
@@ -28,6 +30,12 @@
     "Method": "GET",
     "Accept": "application/json",
     "ContentType": "application/json; charset=utf-8"
+  },
+  "GIVC": {
+    "url": "https://uz-gate.uz.gov.ua/api/v1",
+    "url_token": "GetToken",
+    "userName": "ArcelorMittal",
+    "password": "6be0258b",
+    "Edrpou": "24432974"
   }
-
 }
