--- a/TestCore/TestCore.csproj
+++ b/TestCore/TestCore.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AnalysisLevel>none</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,17 +36,17 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />	 	  
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />	 
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />	 
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />		  
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />		  
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />		
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />		
-    <PackageReference Include="NLog" Version="5.2.5" />		
-    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />		  
+    <PackageReference Include="NLog" Version="5.2.8" />		
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />		  
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EF_IDS\EF_IDS.csproj" />
+    <ProjectReference Include="..\GIVC_Client\GIVC.csproj" />
     <ProjectReference Include="..\IDS_\IDS_.csproj" />
-    <ProjectReference Include="..\WebApiToken\WebApiToken.csproj" />
   </ItemGroup>
 
 </Project>
