--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -135,7 +135,8 @@
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="IDS_ARHIV" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-CNT-Railway-Archive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--Home-NB-->
