--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -126,7 +126,7 @@
     <add key="sap_pass" value="IIyr8OBHnSg8oO" />-->
   </appSettings>
   <connectionStrings>
-    <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
+    <!--<add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />-->
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
@@ -157,11 +157,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <oracle.manageddataaccess.client>
-    <version number="*">
-      <dataSources>
-        <dataSource alias="Wagons" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=krr-sql24)(PORT=1521))(CONNECT_DATA=(SID=RESERV))) " />
-      </dataSources>
-    </version>
-  </oracle.manageddataaccess.client>
 </configuration>
