--- a/WEB_UI/Web.Debug.config
+++ b/WEB_UI/Web.Debug.config
@@ -3,19 +3,16 @@
 <!-- For more information on using Web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    В следующем примере преобразование "SetAttributes" будет изменять значение
-    "connectionString" с целью использования "ReleaseSQLServer", только когда
-    указатель "Match" находит атрибут "name", который имеет значение "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
-  <system.web>
-    <!--
+	<connectionStrings>
+		<add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+		<add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+		<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+		<add name="IDS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-CNT-Railway-Test;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+		<add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+		<add name="IDS_ARHIV" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-CNT-Railway-Archive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+	</connectionStrings>
+	<system.web>
+		<!--
       В следующем примере преобразование "Replace" будет заменять весь 
       раздел <customErrors> в файле Web.config.
       Заметьте, поскольку имеется только один раздел customErrors в узле
@@ -26,5 +23,5 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-  </system.web>
+	</system.web>
 </configuration>
