--- a/IDS/IDS.csproj
+++ b/IDS/IDS.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IDS</RootNamespace>
     <AssemblyName>IDS</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>8cbf6778</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
@@ -63,6 +63,7 @@
     <Compile Include="IDS_SAP.cs" />
     <Compile Include="IDS_WIR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebAPIClientBank.cs" />
     <Compile Include="WebAPIClientSAP.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -85,10 +86,6 @@
     <ProjectReference Include="..\IDSLogs\IDSLogs.csproj">
       <Project>{910d6360-9e8c-4143-a4dd-84e778edb7a6}</Project>
       <Name>IDSLogs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KIS\KIS.csproj">
-      <Project>{93477563-45b7-4c49-a5e7-f8aedee05bd8}</Project>
-      <Name>KIS</Name>
     </ProjectReference>
     <ProjectReference Include="..\UZ\UZ.csproj">
       <Project>{d7147560-b66a-41bb-bddd-4d24403d5e97}</Project>
