--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WEB_UI</RootNamespace>
     <AssemblyName>WEB_UI</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress>false</Use64BitIISExpress>
@@ -39,24 +39,25 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <TypeScriptTarget>ES5</TypeScriptTarget>
     <TypeScriptJSXEmit>React</TypeScriptJSXEmit>
-    <TypeScriptModuleKind />
+    <TypeScriptModuleKind>None</TypeScriptModuleKind>
     <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
-    <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
+    <TypeScriptNoImplicitAny>True</TypeScriptNoImplicitAny>
     <TypeScriptRemoveComments>False</TypeScriptRemoveComments>
     <TypeScriptOutFile />
     <TypeScriptOutDir />
     <TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
-    <TypeScriptNoEmitOnError>True</TypeScriptNoEmitOnError>
-    <TypeScriptSourceMap>True</TypeScriptSourceMap>
+    <TypeScriptNoEmitOnError>False</TypeScriptNoEmitOnError>
+    <TypeScriptSourceMap>False</TypeScriptSourceMap>
     <TypeScriptMapRoot />
     <TypeScriptSourceRoot />
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -89,13 +90,6 @@
     </Reference>
     <Reference Include="Ninject.Web.WebApi, Version=3.3.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.Web.WebApi.3.3.0\lib\net45\Ninject.Web.WebApi.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
-      <HintPath>..\packages\Oracle.ManagedDataAccess.19.8.0\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.ManagedDataAccess.EntityFramework, Version=6.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
-      <HintPath>..\packages\Oracle.ManagedDataAccess.EntityFramework.19.7.0\lib\net45\Oracle.ManagedDataAccess.EntityFramework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -246,6 +240,7 @@
     <Compile Include="Controllers\api\Arhiv\UZ_DOC_PDF_Controller.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoOutGroupController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CurrencyController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_DetentionReturnController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_OperatorsWagonsGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_Reason_DiscrepancyController.cs" />
@@ -297,6 +292,7 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_ModelsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_TypesRepairsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonManufacturersController.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Usage_FeeController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_UZ_DOC_OUTController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_OutgoingDetentionReturnController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WagonInternalOperationController.cs" />
@@ -352,6 +348,10 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bootstrap5.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bootstrap5.min.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.css" />
+    <Content Include="Content\DataTables\extensions\Buttons\css\buttons.bulma.min.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap.min.css" />
     <Content Include="Content\DataTables\extensions\ColReorder\colReorder.bootstrap4.css" />
@@ -376,6 +376,22 @@
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.jqueryui.min.css" />
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.semanticui.css" />
     <Content Include="Content\DataTables\extensions\FixedHeader\fixedHeader.semanticui.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap4.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap4.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap5.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bootstrap5.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bulma.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.bulma.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.dataTables.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.dataTables.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.foundation.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.foundation.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.jqueryui.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.jqueryui.min.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.css" />
+    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.foundation.css" />
     <Content Include="Content\DataTables\media\css\dataTables.foundation.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.semanticui.css" />
@@ -1704,9 +1720,11 @@
     <Content Include="Content\fontawesome-free\svgs\solid\z.svg" />
     <Content Include="Content\module\cblist_station.css" />
     <Content Include="Content\module\directory\edit_dir_operators_wagons.css" />
+    <Content Include="Content\module\directory\form_edit_wagon_addressing.css" />
     <Content Include="Content\module\directory\table_dir_operators_wagons.css" />
     <Content Include="Content\module\directory\table_dir_park_station.css" />
     <Content Include="Content\module\directory\table_dir_park_ways.css" />
+    <Content Include="Content\module\directory\table_directory.css" />
     <Content Include="Content\module\report\view_td_report.css" />
     <Content Include="Content\module\report\view_sd_report.css" />
     <Content Include="Content\module\shared\form_detali.css" />
@@ -1740,6 +1758,7 @@
     <Content Include="Content\module\wsd\view_arrival_cars.css" />
     <Content Include="Content\module\wsd\view_send_cars.css" />
     <Content Include="Content\view\admin\_layout.css" />
+    <Content Include="Content\view\directory\usage_fee.css" />
     <Content Include="Content\view\directory\commercial_condition.css" />
     <Content Include="Content\view\directory\ways.css" />
     <Content Include="Content\view\directory\search_wagon.css" />
@@ -1748,8 +1767,9 @@
     <Content Include="Content\view\idsreport\main_sd_report.css" />
     <Content Include="Content\view\idsrwt\incoming1.css" />
     <Content Include="Content\view\idsrwt\outgoing1.css" />
-    <Content Include="Content\view\shared\print_way.css" />
     <Content Include="Content\view\shared\print_gfa.css" />
+    <Content Include="Content\view\shared\print_way.css" />
+    <Content Include="Content\view\shared\print_gfa1.css" />
     <Content Include="Content\view\shared\_idsreport.css" />
     <Content Include="Images\8m.png" />
     <Content Include="Images\directory\icon-edit.svg" />
@@ -1845,6 +1865,30 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap5.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bulma.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bulma.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.dataTables.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.dataTables.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
+    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap.min.js" />
     <Content Include="Scripts\DataTables\extensions\ColReorder\colReorder.bootstrap4.js" />
@@ -1873,11 +1917,25 @@
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanicui.js" />
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanticui.js" />
     <Content Include="Scripts\DataTables\extensions\FixedHeader\fixedHeader.semanticui.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap4.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap5.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bootstrap5.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bulma.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.bulma.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.dataTables.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.dataTables.min.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.jqueryui.js" />
+    <Content Include="Scripts\DataTables\extensions\Select\js\select.semanticui.js" />
     <Content Include="Scripts\DataTables\media\js\dataTables.jqueryui.js" />
+    <Content Include="Scripts\jquery.dataTables.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.doubleScroll.js" />
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
     <Content Include="Scripts\module\directory\edit_dir_operators_wagons.js" />
+    <Content Include="Scripts\module\directory\form_edit_wagon_addressing.js" />
+    <Content Include="Scripts\module\directory\table_directory.js" />
     <Content Include="Scripts\module\directory\table_dir_operators_wagons.js" />
     <Content Include="Scripts\module\directory\table_dir_park_ways.js" />
     <Content Include="Scripts\module\directory\table_dir_park_station.js" />
@@ -1987,7 +2045,6 @@
     <Content Include="Areas\Directory\Views\Home\Ways.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Park.cshtml" />
     <Content Include="Areas\Directory\Views\Home\OperatorsWagons.cshtml" />
-    <Content Include="Areas\IDSRWT\Views\Home\Incoming1.cshtml" />
     <Content Include="Content\fontawesome-free\less\_sizing.less" />
     <Content Include="Content\fontawesome-free\scss\_functions.scss" />
     <Content Include="Content\fontawesome-free\scss\_sizing.scss" />
@@ -2077,6 +2134,8 @@
     <Content Include="Scripts\amcharts5\themes\Moonrise.js.map" />
     <Content Include="Scripts\amcharts5\themes\Responsive.js.map" />
     <Content Include="Scripts\amcharts5\themes\Spirited.js.map" />
+    <Content Include="Areas\Directory\Views\Home\UsageFee.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\WagonAddressing.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -2105,8 +2164,6 @@
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.dataTables.min.css" />
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.foundation.css" />
     <Content Include="Content\DataTables\extensions\FixedColumns\fixedColumns.foundation.min.css" />
-    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.css" />
-    <Content Include="Content\DataTables\extensions\Select\css\select.semanticui.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap.min.css" />
     <Content Include="Content\DataTables\media\css\dataTables.bootstrap4.css" />
@@ -2279,24 +2336,6 @@
     <Content Include="Scripts\bootstrap-input-spinner.js" />
     <Content Include="Scripts\bootstrap-select.js" />
     <Content Include="Scripts\bootstrap-select.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.bootstrap4.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.colVis.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.flash.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.flash.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.foundation.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.html5.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.jqueryui.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.print.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\buttons.semanticui.min.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.js" />
-    <Content Include="Scripts\DataTables\extensions\Buttons\js\dataTables.buttons.min.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\dataTables.fixedColumns.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\dataTables.fixedColumns.min.js" />
     <Content Include="Scripts\DataTables\extensions\FixedColumns\fixedColumns.bootstrap.min.js" />
@@ -2603,6 +2642,8 @@
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
     <Content Include="Scripts\view\directory\countrys.js" />
+    <Content Include="Scripts\view\directory\main_wagon_addressing.js" />
+    <Content Include="Scripts\view\directory\main_usage_fee.js" />
     <Content Include="Scripts\view\directory\main_park.js" />
     <Content Include="Scripts\view\directory\main_operators_wagons.js" />
     <Content Include="Scripts\view\directory\main_commercial_condition.js" />
@@ -2616,7 +2657,6 @@
     <Content Include="Scripts\view\directory\park_state.js" />
     <Content Include="Scripts\view\directory\present_wagon_marking.js" />
     <Content Include="Scripts\view\directory\wagon_marking.js" />
-    <Content Include="Scripts\view\directory\search_wagon.js" />
     <Content Include="Scripts\view\idsmors\electronic_cards.js" />
     <Content Include="Scripts\view\idsmors\report_wagons.js" />
     <Content Include="Scripts\view\idsmors\park_wagons.js" />
@@ -2624,8 +2664,6 @@
     <Content Include="Scripts\view\idsreport\main_sd_report.js" />
     <Content Include="Scripts\view\idsrwt\main_incoming.js" />
     <Content Include="Scripts\view\idsrwt\main_outgoing.js" />
-    <Content Include="Scripts\view\idsrwt\incoming.js" />
-    <Content Include="Scripts\view\idsrwt\arrival.js" />
     <Content Include="Scripts\view\idsrwt\test.js" />
     <Content Include="Scripts\view\idsrwt\wsd.js" />
     <Content Include="Scripts\view\shared\common.js" />
